--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,17 +1,12 @@
 .background{
-  background: linear-gradient(50deg,#000000 20%,#222121 20%,#222121 40%,#7A3636 40%,#7A3636 80%,#ffffff 80%);
+  background: linear-gradient(60deg,#000000 20%,#222121 20%,#222121 40%,#7A3636 40%,#7A3636 80%,#ffffff 80%);
   width: 100%;
   height: 100%;
 }
 .card1{
-  background: linear-gradient(-50deg,#672D2D 45%,transparent 45%,rgba(0,0,0,0.7)),url("../public/Espresso.jpg") center center no-repeat;
+  background: linear-gradient(-60deg,#222121 45%,transparent 45%,rgba(0,0,0,0.0)),url("../public/test.jpg") left bottom no-repeat;
   border-radius: 10px;
 }
-.card2{
-  background: linear-gradient(50deg,#000000 45%,transparent 45%,rgba(0,0,0,0.7)),url("../public/Cappuchino.jpg") right bottom no-repeat;
-  border-radius: 10px;
-}
-.card3{
-  background: linear-gradient(-50deg,#672D2D 45%,transparent 45%,rgba(0,0,0,0.7)),url("../public/Mocha.jpg") left top no-repeat;
-  border-radius: 10px;
+.announcements{
+  background: linear-gradient(transparent,rgba(0,0,0,0.8)),url("../public/tree.jpg") center center no-repeat;
 }
